force-app/main/default/objects/Manufacturer__c/Manufacturer__c.object-meta.xml
<CustomObject>
    <description>Contains the details of the Manufacturer. Each Manufacturer have a unique Manufacturer ID on the basis of which relationship of a Manufacturer with a particular Product is identified.</description>
    <label>Manufacturer</label>
    <nameField>
        <label>Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturers/Vendor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>