force-app/main/default/objects/Manufacturer__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>Specifies the number of products still available</description>
    <label>Availability</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>