force-app/main/default/objects/Manufacturer__c/fields/Boat_Builder__c.field-meta.xml
<CustomField>
    <fullName>Boat_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boat Builder</label>
    <type>Checkbox</type>
</CustomField>