force-app/main/default/objects/Manufacturer__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Manufacturers</relationshipLabel>
    <relationshipName>Manufacturers</relationshipName>
    <type>Lookup</type>
</CustomField>