force-app/main/default/objects/Manufacturer__c/fields/Create_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Create_Manufacturer__c</fullName>
    <formula>HYPERLINK(&quot;https://stws-dev-org-dev-ed.my.salesforce.com/a0O/e?retURL=%2Fa0O%2Fo&quot;, &quot;Create Manufacturer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Manufacturer</label>
    <type>Text</type>
</CustomField>