force-app/main/default/objects/Manufacturer__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Specifies a short Description about the Manufacturer</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>