force-app/main/default/objects/Manufacturer__c/fields/Manufacturer_name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_name__c</fullName>
    <description>Specifies the Manufacturer Id</description>
    <label>Manufacturer ID</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>