force-app/main/default/objects/Manufacturer__c/fields/Model_Variant__c.field-meta.xml
<CustomField>
    <fullName>Model_Variant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Model Variant</label>
    <type>Checkbox</type>
</CustomField>