force-app/main/default/objects/Manufacturer__c/fields/Oustanding_Amount_on_Orders__c.field-meta.xml
<CustomField>
    <fullName>Oustanding_Amount_on_Orders__c</fullName>
    <label>Oustanding Amount on Orders</label>
    <summarizedField>Order__c.Amount_On_Order__c</summarizedField>
    <summaryFilterItems>
        <field>Order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Order</value>
    </summaryFilterItems>
    <summaryForeignKey>Order__c.Vendor_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>