force-app/main/default/objects/Manufacturer__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>Parts Account</fullName>
            </value>
            <value>
                <fullName>Card on File</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>