force-app/main/default/objects/Manufacturer__c/recordTypes/Boat_Manufacturer.recordType-meta.xml
<RecordType>
    <fullName>Boat_Manufacturer</fullName>
    <active>true</active>
    <label>Boat Manufacturer</label>
</RecordType>