force-app/main/default/objects/Manufacturer__c/validationRules/Manufacturer_Id_Required_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturer_Id_Required_Rule</fullName>
    <active>true</active>
    <description>Manufacturer Id must be specified.</description>
    <errorConditionFormula>AND(
 RecordType.Name ==&apos;Boat Manufacturer&apos;,
ISBLANK( Manufacturer_name__c ) 
)</errorConditionFormula>
    <errorDisplayField>Manufacturer_name__c</errorDisplayField>
    <errorMessage>Manufacturer Id must be specified.</errorMessage>
</ValidationRule>