force-app/main/default/objects/Manufacturer__c/validationRules/Valid_Availability_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Availability_Rule</fullName>
    <active>true</active>
    <description>Availability should be filled with a valid positive number</description>
    <errorConditionFormula>IF( Availability__c &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Availability__c</errorDisplayField>
    <errorMessage>Availability cannot be a negative number.</errorMessage>
</ValidationRule>