force-app/main/default/objects/Manufacturer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact_Person__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>