force-app/main/default/objects/Manufacturer__c/listViews/Vendors.listView-meta.xml
<ListView>
    <fullName>Vendors</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Manufacturer__c.Vendor</value>
    </filters>
    <label>Vendors</label>
</ListView>