force-app/main/default/objects/Manufacturer__c/listViews/Vendors_List.listView-meta.xml
<ListView>
    <fullName>Vendors_List</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>Terms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Manufacturer__c.Vendor</value>
    </filters>
    <label>Vendors List</label>
</ListView>